--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,10 @@
 }
 
 .urlshortener {
-    padding: 10px 10px 10px 10px;
+    padding: 10px 10px 0px 10px;
+    width: 300px;
+    display:flex;
+    flex-direction: column;
 }
 
 input[type="button"] {
@@ -13,8 +16,7 @@ input[type="button"] {
 
 @media only screen and (max-width: 600px) {
     .urlshortener {
-        display: flex;
-        flex-direction: column;
+        width:initial;
     }
 
     .urlshortener-clipboard {
